[package]
name = "autoagents-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["autoagents-llm/full", "grpc"]
grpc = ["tonic", "prost", "tokio/net"]
openai = ["autoagents-llm/openai"]
anthropic = ["autoagents-llm/anthropic"]
ollama = ["autoagents-llm/ollama"]
deepseek = ["autoagents-llm/deepseek"]
xai = ["autoagents-llm/xai"]
phind = ["autoagents-llm/phind"]
google = ["autoagents-llm/google"]
groq = ["autoagents-llm/groq"]
azure_openai = ["autoagents-llm/azure_openai"]

[dependencies]
autoagents-derive.workspace = true
autoagents-llm.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true, optional = true }
dirs = { workspace = true }
regex = { workspace = true }
tokio-stream.workspace = true
log = { workspace = true, features = ["std"] }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
autoagents-test-utils = { path = "../test_utils" }
