[package]
name = "autoagents-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["autoagents-llm/full", "wasm"]
openai = ["autoagents-llm/openai"]
anthropic = ["autoagents-llm/anthropic"]
ollama = ["autoagents-llm/ollama"]
deepseek = ["autoagents-llm/deepseek"]
xai = ["autoagents-llm/xai"]
phind = ["autoagents-llm/phind"]
google = ["autoagents-llm/google"]
groq = ["autoagents-llm/groq"]
azure_openai = ["autoagents-llm/azure_openai"]
liquid_edge = ["autoagents-llm/liquid_edge"]
wasm = ["dep:wasmtime"]

[dependencies]
autoagents-llm.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
tokio-stream.workspace = true
log = { workspace = true, features = ["std"] }
wasmtime = { workspace = true, optional = true }
ractor = { version = "0.15.7", features = ["serde", "async-trait"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
autoagents-test-utils = { workspace = true }
