[package]
name = "autoagents-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["autoagents-llm/full", "wasmtime", "cluster"]
openai = ["autoagents-llm/openai"]
anthropic = ["autoagents-llm/anthropic"]
ollama = ["autoagents-llm/ollama"]
deepseek = ["autoagents-llm/deepseek"]
xai = ["autoagents-llm/xai"]
phind = ["autoagents-llm/phind"]
google = ["autoagents-llm/google"]
groq = ["autoagents-llm/groq"]
azure_openai = ["autoagents-llm/azure_openai"]
liquid_edge = ["autoagents-llm/liquid_edge"]
wasmtime = ["dep:wasmtime"]
cluster = ["ractor/cluster", "dep:ractor_cluster"]

[dependencies]
autoagents-llm.workspace = true
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
log = { workspace = true, features = ["std"] }
wasmtime = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"

# Non-WASM dependencies (only when not targeting wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
ractor = { version = "0.15.8", features = ["serde", "async-trait"] }
ractor_cluster = { version = "0.15.8", optional = true, features = [
    "async-trait",
] }

# WASM dependencies (only when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
getrandom = { workspace = true, features = ["wasm_js"] }
uuid = { workspace = true, features = ["serde", "v4", "js"] }

[dev-dependencies]
autoagents-test-utils = { workspace = true }
