[package]
name = "liquid-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal edge inference runtime for LLMs"
repository.workspace = true
keywords = ["inference", "llm", "edge", "runtime"]
categories = ["science", "algorithms"]
readme = "README.md"

[features]
default = ["onnx"]
onnx = ["dep:ort", "dep:ndarray"]
cuda = ["onnx", "ort/cuda"]

[dependencies]
# Core dependencies
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "fs"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ONNX Runtime support
ort = { version = "=2.0.0-rc.10", optional = true, features = [
    "copy-dylibs",
    "half",
    "std",
] }
ndarray = { workspace = true, optional = true }


# Utilities
rand = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
