[package]
name = "autoagents-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = [
    "openai",
    "anthropic",
    "ollama",
    "deepseek",
    "xai",
    "phind",
    "google",
    "groq",
    "azure_openai",
    "liquid_edge",
]
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
azure_openai = []
liquid_edge = ["dep:liquid-edge", "dep:tokenizers", "dep:rand", "dep:minijinja"]

[dependencies]
liquid-edge = { workspace = true, optional = true, features = ["default"] }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
ureq = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }
dirs = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
either = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
