[package]
name = "autoagents-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = [
    "openai",
    "anthropic",
    "ollama",
    "deepseek",
    "xai",
    "phind",
    "google",
    "groq",
    "azure_openai",
    "openrouter",
    "liquid_edge",
]
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
azure_openai = []
openrouter = []
liquid_edge = ["dep:liquid-edge", "dep:tokenizers", "dep:rand", "dep:minijinja"]

[dependencies]
liquid-edge = { workspace = true, optional = true, features = ["default"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }
regex = { workspace = true }
base64 = { workspace = true }
either = { workspace = true }

# Non-WASM dependencies (only when not targeting wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
ureq = { workspace = true }
dirs = { workspace = true }

# WASM dependencies (only when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
tempfile = { workspace = true }
