[package]
name = "autoagents-toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = []
mcp = ["rmcp", "toml", "thiserror"]
filesystem = []
search = ["reqwest", "once_cell"]

[dependencies]
autoagents.workspace = true
autoagents-derive.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
log = { workspace = true }
once_cell = { workspace = true, optional = true }
base64 = { workspace = true }
toml = { version = "0.8", optional = true }
thiserror = { workspace = true, optional = true }

rmcp = { workspace = true, optional = true, features = ["client", "transport-child-process", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
