[package]
name = "basic-example"
version = "0.2.0-alpha.0"
edition.workspace = true
publish = false

[features]
default = []

[dependencies]
autoagents-derive.workspace = true
autoagents = { workspace = true, features = ["openai", "deepseek", "logging"] }
autoagents-toolkit = { workspace = true, features = ["search"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio-stream.workspace = true
colored = "3.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
once_cell = { workspace = true }
