[package]
name = "autoagents-burn-example"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autoagents-derive.workspace = true
autoagents = { workspace = true, features = [] }
autoagents-burn = { workspace = true, default-features = false, features = [
    "tiny",
    "cuda"
] }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream.workspace = true
tokio = { workspace = true, version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }

