[package]
name = "autoagents-burn-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "autoagents-burn-example"
path = "src/main.rs"
test = false

[dependencies]
autoagents-derive.workspace = true
autoagents = { workspace = true, features = [] }
autoagents-burn = { workspace = true, default-features = false, features = [
    "tiny",
    "llama3",
    "f16",
    "metal",
    "pretrained"
] }
clap = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }

