[package]
name = "cluster-example"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents-derive.workspace = true
autoagents = { workspace = true, features = ["openai", "logging", "cluster"] }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tokio-stream.workspace = true
colored = "3.0.0"
env_logger.workspace = true
